Avoid mixing current and next state

Mixing of current and next state can create all sorts of undefined
behavior, e.g. windows not moving to the desired location or
experiencing issues when tiling a maximized window.

BUG: 449541
(cherry picked from commit c54937b2ad5afd02f7cfc19916f74e7fa8ab0bbb)